# codex-desktop-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  update-codex-hash.yml  upstream-build-app.yml  upstream-preview-build.yml  upstream-release-monitor.yml
computer-use-linux/: Cargo.toml
computer-use-linux/src/: chrome_runtime.rs  diagnostics.rs  gnome_extension.rs  main.rs  screenshot.rs  server.rs  windows.rs
docs/: architecture.md  build-and-packaging.md  launcher-performance.md  linux-computer-use.md  linux-features-architecture.md  native-setup.md  nix.md  troubleshooting.md  updater.md  upstream-dmg-intelligence.md  upstream-release-monitor.md  wayland-input-focus-investigation.md  webview-server-evaluation.md
docs/agents/: repository-map.md  (+2 more)
launcher/: start.sh.template  webview-server.py
linux-features/: README.md
linux-features/mcp-helper-reaper/reaper/: Cargo.toml
linux-features/mcp-helper-reaper/reaper/src/: lib.rs  main.rs
nix/: home-manager-module.nix  linux-features-test.nix  linux-features.nix  nixos-module.nix
notification-actions-linux/: Cargo.toml  README.md
notification-actions-linux/src/: main.rs
record-replay-linux/: Cargo.toml
scripts/: bootstrap-wizard.sh  build-pacman.sh  build-rpm.sh  ci-local.sh  install-deps.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  rebuild-candidate.sh  sudo-with-alert.sh  validate-upstream-dmg.js  workspace-root-open-targets-patch.test.js
tests/: scripts_smoke.sh
updater/: Cargo.toml
(+236 files in other folders)
