[package]
name = "codex-notification-actions-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-notification-actions-linux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["io-std", "io-util", "macros", "rt"] }
zbus = "5.14.0"
