[package]
name = "codex-mcp-helper-reaper"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "codex-mcp-helper-reaper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
